--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,9 +9,7 @@ services:
       - ./.env
 
   web:
-    build: 
-      context: ../
-      dockerfile: api_yamdb/Dockerfile
+    image: artni96/web:latest
     restart: always
     volumes:
       - static_value:/app/api_yamdb/static/
