--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       - ./.env
 
   web:
-    image: artni96/yamdb_final/api_yamdb/:latest
+    image: artni96/yamdb_final:latest
     restart: always
     volumes:
       - static_value:/app/api_yamdb/static/
