--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.7-slim
  
 WORKDIR /app 
  
-COPY requirements.txt . 
+COPY api_yamdb/requirements.txt . 
  
 RUN apt update && apt install -y gcc libpq-dev 
  
