--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -43,9 +43,9 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
-          file: ./api_yamdb/Dockerfile
+          file: api_yamdb/Dockerfile
           push: true
-          tags: artni96/yamdb_final:latest
+          tags: artni96/web:latest
 
   deploy:
     runs-on: ubuntu-latest
