--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -22,9 +22,9 @@ jobs:
         pip install -r requirements.txt
 
     - name: Test with flake8
-      uses: python -m flake8
+      run: python -m flake8
     - name: Test with django tests
-      uses: pytest
+      run: pytest
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
